@@ -1,3 +1,8 @@
+2007-12-05  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
+
+	* generic/tclCmdIL.c (Tcl_LsearchObjCmd): Prevent shimmering crash
+	when -exact and -integer/-real are mixed. [Bug 1844789]
+
 2007-12-03  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/tclUnixChan.c (CreateSocketAddress): Add extra #ifdef-fery to
